# bitgoo

./: .editorconfig  .gitignore  prep.sh
cpp/: CMakeLists.txt  gen_iaca.sh
cpp/bench/: BM_CountBits.cpp  BM_GetNthBitOffset.cpp  CMakeLists.txt  bench.cpp  bench.h
cpp/bitgoo/: CMakeLists.txt  GetKeyForIndex.cpp  bitgoo.h
cpp/bitgoo/CountBits/: ASMUnrolled.cpp  Intrinsics.cpp  IntrinsicsUnrolled.cpp  IntrinsicsUnrolled2.cpp  IntrinsicsUnrolled3.cpp  NoPopcnt.cpp  Vanilla.cpp
cpp/bitgoo/GetNthBitOffset/: Naive.cpp  NoIntrinsics.cpp  POPCNTAndBMI1.cpp  POPCNTAndBMI1Unrolled.cpp  POPCNTAndBMI2.cpp  POPCNTAndBMI2ASMUnrolled2.cpp  POPCNTAndBMI2ASMUnrolled3.cpp  POPCNTAndBMI2ASMUnrolledBad.cpp  POPCNTAndBMI2Unrolled.cpp  POPCNTAndBMI2Unrolled2.cpp  POPCNTAndBMI2Unrolled3.cpp
cpp/cmake/: ConfigGTest.cmake
cpp/tests/: CMakeLists.txt  test_CountBits.cpp  test_GetNthBithOffset.cpp
csharp/: .gitignore  Directory.Build.props  bitgoo.sln
csharp/BitGoo/: CountBits.Naive.cs  CountBits.cs  GetNthBitOffset.Naive.cs  GetNthBitOffset.NoIntrinsics.cs  GetNthBitOffset.POPCNTAndBMI1.cs  GetNthBitOffset.POPCNTAndBMI2.cs  GetNthBitOffset.POPCNTAndBMI2Unrolled.cs  Stuff.cs
csharp/BitGoo.Bench/: BitGoo.Bench.csproj  CountBitsBenchmarks.cs  GetNthBitOffsetBenchmarks.cs  Program.cs  hogs.sh
csharp/BitGoo.Console/: BitGoo.Console.csproj  Program.cs
csharp/BitGoo.Tests/: BitGoo.Tests.csproj  CountBitsTests.cs  GetNthBitIndexTests.cs
